--- a/mpr121/mpr121.html
+++ b/mpr121/mpr121.html
@@ -17,13 +17,13 @@
 	});
 </script>
 
-<script type="text/x-red" data-template-name="lower-case">
+<script type="text/x-red" data-template-name="mpr121-interrupt">
     <div class="form-row">
         <label for="node-input-gpio"><i class="icon-tag"></i> Gpio for interrupt</label>
   		<input type="text" id="node-input-gpio" placeholder="gpio">
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="lower-case">
+<script type="text/x-red" data-help-name="mpr121-interrupt">
     <p>A simple node that use MPR121</p>
 </script>
